# CASTER

./: README.md
benchmark/: README.md  pyproject.toml
benchmark/src/caster_benchmark/: __init__.py  __main__.py  constants.py  dataset.py  eval_task1.py  eval_task2.py  eval_task2_judge.py  io_utils.py  openrouter.py  prompts.py  task1.py  task2.py  video.py
docs/: app.js  index.html  styles.css
