[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caster-benchmark"
version = "0.1.0"
description = "Benchmark suite for the CASTER dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "bert-score>=0.3.13",
  "huggingface_hub>=0.24.0",
  "nltk>=3.8.1",
  "numpy>=1.26,<2.0",
  "openai>=1.30.0",
  "opencv-python-headless>=4.10.0.84",
  "rouge-score>=0.1.2",
  "torch>=2.1.0",
]

[project.scripts]
caster-benchmark = "caster_benchmark.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
